# jarvis

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/prompts/: system.md
docker/: Dockerfile.backend
docs/: architecture.md
launcher/: Cargo.toml
launcher/src/: backend.rs  chat.rs  checks.rs  docker.rs  main.rs  ollama.rs
scripts/: download_models.sh  setup.sh
src/jarvis/: __init__.py  config.py  main.py
src/jarvis/agents/: router.py
src/jarvis/agents/graphs/: __init__.py  orchestrator.py
src/jarvis/api/: websocket.py
src/jarvis/api/routes/: chat.py  health.py  tools.py
src/jarvis/automation/: browser.py  permissions.py  system_control.py  workflows.py
src/jarvis/cli/: app.py
src/jarvis/connectors/: base.py  github.py  google.py  notion.py  telegram.py
src/jarvis/events/: bus.py
src/jarvis/llm/: __init__.py  ollama_client.py
src/jarvis/memory/: __init__.py  manager.py  semantic.py
src/jarvis/tools/: datetime_tool.py  files.py  notes.py  registry.py  system.py  tasks.py
src/jarvis/voice/: pipeline.py  stt.py  tts.py
tests/unit/: test_tools.py
