[package]
name = "jarvis-launcher"
version = "0.1.0"
edition = "2021"
description = "One-command launcher for Jarvis AI Assistant"
authors = ["megatron54"]

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"
dirs = "6"
